# rinha-backend-2025-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  nginx.conf
src/: handlers.rs  main.rs  payment_processor.rs  payments_dto.rs  routes.rs  state.rs
