[package]
name = "rinha-backend-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
r2d2 = "0.8.10"
redis = { version = "0.32.4", features = ["r2d2"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
